# opi

./: .gitignore  Cargo.toml  README.md  flake.nix  mix.exs  postgresql.conf  shell.nix
api/: mix.exs
api/config/: config.exs  dev.exs  test.exs
api/lib/api/: opi.ex
api/lib/api/opi/: transaction.ex  type.ex
api/lib/api_web/: endpoint.ex  router.ex
api/lib/api_web/controllers/: transaction_controller.ex  transaction_json.ex
api/priv/repo/migrations/: 20240422114328_create_transactions.exs  20240423114005_create_transactions.exs  20240423114217_create_types.exs  (+2 more)
api/test/api/: opi_test.exs
config/: config.exs  dev.exs  runtime.exs  test.exs
lib/: opi.ex  opi_web.ex
lib/opi/: application.ex  opi.ex  repo.ex
lib/opi/opi/: account.ex  transaction.ex  type.ex
lib/opi_web/: endpoint.ex  router.ex  telemetry.ex
lib/opi_web/controllers/: account_controller.ex  account_json.ex  changeset_json.ex  error_json.ex  fallback_controller.ex  transaction_controller.ex  transaction_json.ex  type_controller.ex  type_json.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20240609195340_create_types.exs  20240609195459_create_accounts.exs  20240609195920_create_transactions.exs
src/: main.rs
src/components/: expense.rs  expenses_input.rs  expenses_table.rs  mod.rs  top_bar.rs
test/: test_helper.exs
test/opi/: opi_test.exs
test/opi_web/controllers/: account_controller_test.exs  error_json_test.exs  transaction_controller_test.exs  type_controller_test.exs
test/support/: conn_case.ex  data_case.ex
test/support/fixtures/: opi_fixtures.ex
(+2 files in other folders)
