[package]
name = "opi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
async-recursion = "1.0.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
futures = "0.3.30"
chrono = { version = "0.4.31", features = ["serde"] }
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-sortable = "0.1.2"
